environments/prod/uptime-kuma/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  parentRefs:
    - name: simons-gateway
      namespace: envoy
  hostnames:
    - "uptime.simonbrundin.com"
  rules:
    - backendRefs:
        - kind: Service
          name: uptime-kuma
          port: 3001
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
